@@ -1,0 +1,51 @@
+{
+   "abstract" : "Read and write configuration data through Augeas",
+   "author" : [
+      "Dominique Dumont (ddumont at cpan dot org)"
+   ],
+   "dynamic_config" : 1,
+   "generated_by" : "Module::Build version 0.38, CPAN::Meta::Converter version 2.110930",
+   "license" : [
+      "open_source"
+   ],
+   "meta-spec" : {
+      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
+      "version" : "2"
+   },
+   "name" : "Config-Model-Backend-Augeas",
+   "prereqs" : {
+      "build" : {
+         "requires" : {
+            "Test::Exception" : 0,
+            "Test::More" : 0,
+            "Test::Warn" : "0.11"
+         }
+      },
+      "configure" : {
+         "requires" : {
+            "Module::Build" : "0.38"
+         }
+      },
+      "runtime" : {
+         "requires" : {
+            "Config::Augeas" : "0.303",
+            "Config::Model" : "1.236",
+            "Exception::Class" : 0,
+            "Log::Log4perl" : "1.11"
+         }
+      }
+   },
+   "provides" : {
+      "Config::Model::Backend::Augeas" : {
+         "file" : "lib/Config/Model/Backend/Augeas.pm",
+         "version" : "0.109"
+      }
+   },
+   "release_status" : "stable",
+   "resources" : {
+      "license" : [
+         "http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt"
+      ]
+   },
+   "version" : "0.109"
+}
