@@ -7,9 +7,10 @@ build_requires:
   Test::More: 0
   Test::Warn: 0.11
 configure_requires:
-  Module::Build: 0.36
-generated_by: 'Module::Build version 0.3607'
-license: lgpl
+  Module::Build: 0.38
+dynamic_config: 1
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110930'
+license: open_source
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
@@ -17,12 +18,12 @@ name: Config-Model-Backend-Augeas
 provides:
   Config::Model::Backend::Augeas:
     file: lib/Config/Model/Backend/Augeas.pm
-    version: 0.108
+    version: 0.109
 requires:
   Config::Augeas: 0.303
-  Config::Model: 1.207
+  Config::Model: 1.236
   Exception::Class: 0
   Log::Log4perl: 1.11
 resources:
   license: http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt
-version: 0.108
+version: 0.109
